[package]
name = "faiss-rest-api"
version = "0.0.1"
authors = ["Piotr Wikieł <piotr.wikiel@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
serde = {version="1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4"
rocket_contrib = "0.4"
faiss = "0.8"
clap = "2.33.0"